# TWB

./: .gitignore  AGENTS.md  CHANGELOG.md  DEV_NOTES.md  GEMINI.md  README.md  activate_env.bat  activate_env.sh  build_docs.py  config.example.json  docker-compose.yml  force_read_reports.py  manager.py  map.html  pyproject.toml  raw_troops.py  relacje.md  requirements.txt  reset_bot.sh  run.py  schema.sql  test.py  test2.py  test3.py  test5.py  test6.py  test_out.html  test_regex.py  test_regex_2.py  test_report.py  test_total.py  tmp_overview.html  twb.py
.ai_docs/: 00_architecture_overview.md  01_twb_root.md  02_core.md  03_game.md  04_webmanager.md  05_browser_extension.md  06_pages.md
Antropic/: .env.example  ARCHITEKTURA.md  FileUploadZone.tsx  auth.ts  drive.ts  notion-types.ts  notion.ts  projects.ts  route.ts  validations.ts
browser_extension/: README.md  background.js  content.js  manifest.json  map_scraper.js  popup.html  popup.js
core/: database.py  db_data_provider.py  extractors.py  models.py  reporter.py  request.py  twstats.py  updater.py  world_crawler.py  world_data.py
game/: README.md  attack.py  attack_cache.py  defence_manager.py  farm_optimizer.py  gather_manager.py  map.py  market.py  recruit_manager.py  reports.py  resources.py  scavenging.py  troopmanager.py  village.py  village_actions.py  village_config.py  warehouse_balancer.py
pages/: overview.py
scripts/: debug_dashboard.py  fix_extractors.py  force_read_reports.py  migration_smart_farming.py  test4.py  test7.py  twm_sync.py  world_sync_service.py
tests/: __init__.py  conftest.py  (+25 more)
(+26 files in other folders)
